fixed overflow and added my pop.

--- a/style.css
+++ b/style.css
@@ -146,8 +146,6 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
 }
 
 .who-am-i {
@@ -207,8 +205,6 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
-  overflow-y: scroll;
-  scroll-behavior: smooth;
 }
 
 .skills-content {
@@ -295,7 +291,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 3;
+    z-index: 2;
 }
 
 #projects line {
@@ -475,6 +471,22 @@ body {
 .contact-content a {
     text-decoration: none;
     color: rgb(0, 0, 0);
+}
+
+.pop-up {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    margin: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px; 
+    background-color: rgb(199, 197, 197);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10px;
+    display: none;
 }
 
 @media(max-width: 554px) {
